.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todoapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: todoapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp
                port:
                  number: 80
